# lincity-ng

./: .gitignore  ChangeLog  README  autogen.sh  configure.ac  makerelease.sh
contrib/win32/: lincity-ng.rc
mk/macro/: ax_binreloc.m4  ax_check_gl.m4  ax_check_zlib.m4  libxml.m4  sdl.m4  sdl_xxx.m4
mk/msvc/: iconv.h  stdint.h
src/: Makefile.am
src/PhysfsStream/: Makefile.am  PhysfsSDL.cpp  PhysfsSDL.hpp  PhysfsStream.cpp  PhysfsStream.hpp
src/gui/: Button.cpp  Button.hpp  Child.hpp  Color.hpp  Component.hpp  ComponentFactory.hpp  ComponentLoader.cpp  ComponentLoader.hpp  Desktop.hpp  Document.cpp  Document.hpp  DocumentElement.hpp  DocumentImage.hpp  Event.hpp  FilledRectangle.hpp  Filter.hpp  FontManager.hpp  Gradient.cpp  Gradient.hpp  Image.hpp  Makefile.am  Painter.hpp  Panel.hpp  Paragraph.hpp  Rect2D.hpp  ScrollBar.cpp  ScrollBar.hpp  ScrollView.cpp  ScrollView.hpp  Style.hpp  SwitchComponent.hpp  TableLayout.cpp  TableLayout.hpp  Texture.hpp  TextureManager.hpp  TooltipManager.cpp  TooltipManager.hpp  Vector2.hpp  Window.cpp  Window.hpp  (+2 more)
src/gui/PainterGL/: PainterGL.hpp  TextureGL.hpp  TextureManagerGL.hpp
src/gui/PainterSDL/: PainterSDL.hpp  TextureManagerSDL.hpp  TextureSDL.hpp
src/gui/callback/: Callback.hpp  CallbackBase.hpp  Signal.hpp
src/gui_interface/: dialbox_interface.h  mps.h  pbar_interface.h  readpng.h  screen_interface.h  shared_globals.h
src/lincity/: Makefile.am  engglobs.h  engine.cpp  engine.h  fileutil.cpp  fileutil.h  init_game.cpp  init_game.h  lc_locale.cpp  lc_locale.h  lcconfig.h  lclib.cpp  lclib.h  lcstring.h  lctypes.h  lin-city.h  lintypes.cpp  lintypes.h  loadsave.cpp  loadsave.h  old_ldsvguts.cpp  old_ldsvguts.h  power.h  simulate.cpp  simulate.h  stats.cpp  stats.h  transport.cpp  transport.h
src/lincity-ng/: ButtonPanel.cpp  ButtonPanel.hpp  CheckButton.cpp  CheckButton.hpp  Config.cpp  Config.hpp  Debug.hpp  Dialog.cpp  Dialog.hpp  EconomyGraph.hpp  ErrorInterface.hpp  Game.cpp  Game.hpp  GameView.hpp  HelpWindow.cpp  HelpWindow.hpp  MainLincity.hpp  MainMenu.cpp  MainMenu.hpp  Makefile.am  MapEdit.hpp  MapPoint.hpp  MiniMap.cpp  MiniMap.hpp  Mps.hpp  PBar.cpp  PBar.hpp  ScreenInterface.hpp  Sound.cpp  Sound.hpp  TimerInterface.hpp  Util.hpp  binreloc.h  main.cpp  main.hpp  readdir.hpp
src/lincity/modules/: all_modules.h  blacksmith.h  coal_power.h  coalmine.h  commune.h  cricket.h  fire.h  firestation.h  health_centre.h  heavy_industry.cpp  heavy_industry.h  light_industry.h  mill.h  modules.h  monument.h  oremine.h  organic_farm.cpp  organic_farm.h  parkland.h  port.h  pottery.h  power_line.h  rail.h  recycle.h  residence.h  road.h  rocket_pad.h  school.h  shanty.h  solar_power.h  substation.h  tip.h  track.h  university.cpp  university.h  water.h  waterwell.h  windmill.h
src/tinygettext/: Makefile.am  TinyGetText.cpp  TinyGetText.hpp  findlocale.cpp  findlocale.hpp  gettext.hpp
src/tools/xmlgettext/: XmlReader.hpp
